Se agregan pages

--- a/src/app/docente-page/docente-page.page.html
+++ b/src/app/docente-page/docente-page.page.html
@@ -32,7 +32,7 @@
           <ion-input placeholder="Ingrese nombre"></ion-input>
         </ion-item>
       </form>
-      <ion-button shape="round" class="btnIngresar">Ingresar</ion-button>
+      <ion-button (click)="goDocenteQr()" shape="round" class="btnIngresar">Ingresar</ion-button>
       <ion-button fill="clear" shape="round" class="btnRecuperarContraseña">Recuperar contraseña</ion-button>
     </ion-card-content>
   </ion-card>
