--- a/src/app/docente-page/docente-page.page.html
+++ b/src/app/docente-page/docente-page.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
       </ion-buttons>
-    <ion-title>DocentePage</ion-title>
+    <ion-title>RegistrAPP</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -18,7 +18,7 @@
 <ion-content>
   <ion-card class="cardLogin">
     <ion-card-header>
-      <ion-card-title class="cardTitle">QrAsistencia</ion-card-title>
+      <ion-card-title class="cardTitle">Indique sus credenciales</ion-card-title>
     </ion-card-header>
   
     <ion-card-content>
@@ -29,7 +29,7 @@
         </ion-item>
         <ion-item>
           <ion-label>Contraseña</ion-label>
-          <ion-input placeholder="Ingrese nombre"></ion-input>
+          <ion-input  type="password" placeholder="Ingrese nombre"></ion-input>
         </ion-item>
       </form>
       <ion-button (click)="goDocenteQr()" shape="round" class="btnIngresar">Ingresar</ion-button>
