--- a/src/app/alumno-page/alumno-page.page.html
+++ b/src/app/alumno-page/alumno-page.page.html
@@ -1,16 +1,47 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-      </ion-buttons>
-    <ion-title>AlumnoPage</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<ion-content [fullscreen]="true" class="ion-padding">
+  <ion-header [translucent]="true">
     <ion-toolbar>
-      <ion-title size="large">alumnoPage</ion-title>
+      <ion-buttons slot="start">
+        <!-- Botón de retroceso personalizado -->
+        <ion-button (click)="goBack()">
+          <ion-icon name="arrow-back"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      <ion-title>RegistrAPP</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-title>Iniciar Sesión</ion-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-list lines="full" class="ion-no-margin">
+        <ion-item>
+          <ion-label position="floating">Nombre de Usuario</ion-label>
+          <ion-input type="text" [(ngModel)]="username" name="username" (ionChange)="validarCampos()"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Contraseña</ion-label>
+          <ion-input type="password" [(ngModel)]="password" name="password" (ionChange)="validarCampos()"></ion-input>
+        </ion-item>
+      </ion-list>
+
+      <ion-button expand="full" shape="round" color="primary" (click)="ingresar()">
+        INGRESAR
+      </ion-button>
+
+      <!-- Agregar enlace para "Recuperar Contraseña" -->
+      <ion-button expand="full" shape="round" color="tertiary" (click)="recuperarContrasena()">
+        Recuperar Contraseña
+      </ion-button>
+
+      <!-- Botón para limpiar campos -->
+      <ion-button expand="full" shape="round" color="secondary" (click)="limpiarCampos()">
+        LIMPIAR CAMPOS
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
