--- a/src/app/recuperar-contrasena-docente/recuperar-contrasena-docente.page.html
+++ b/src/app/recuperar-contrasena-docente/recuperar-contrasena-docente.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>inicio-page</ion-title>
+    <ion-title>Recuperar-contrasena-docente</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
-    <div class="titulo">
-      <ion-title class="bienvenido">Bienvenido!ercecec</ion-title>
-      </div>
+    <ion-toolbar>
+      <ion-title size="large">Recuperar-contrasena-docente</ion-title>
+    </ion-toolbar>
   </ion-header>
 </ion-content>
