--- a/src/app/recuperar-password-page/recuperar-password-page.page.html
+++ b/src/app/recuperar-password-page/recuperar-password-page.page.html
@@ -1,45 +1,44 @@
 <ion-content [fullscreen]="true" class="ion-padding">
   <ion-header [translucent]="true">
-    <ion-toolbar>
+    <ion-toolbar color="dark">
       <ion-buttons slot="start">
-        <!-- Botón de retroceso personalizado -->
-        <ion-button (click)="goBack()">
+        <ion-button (click)="goBack()" color="light">
           <ion-icon name="arrow-back"></ion-icon>
         </ion-button>
       </ion-buttons>
-      <ion-title>Recuperar Contraseña</ion-title>
+      <ion-title class="custom-title">Recuperar Contraseña</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <ion-card>
+  <ion-card class="custom-card">
     <ion-card-header>
-      <ion-title>Ingresa tus datos</ion-title>
+      <ion-title class="custom-card-title">Ingresa tus datos</ion-title>
     </ion-card-header>
 
     <ion-card-content>
       <ion-list lines="full" class="ion-no-margin">
         <!-- Campo "Usuario" -->
         <ion-item>
-          <ion-label position="floating">Usuario</ion-label>
-          <ion-input type="text" [(ngModel)]="usuario" name="usuario"></ion-input>
+          <ion-label position="floating" class="custom-label">Usuario</ion-label>
+          <ion-input type="text" [(ngModel)]="usuario" name="usuario" class="custom-input"></ion-input>
         </ion-item>
 
         <!-- Campo "Contraseña nueva" -->
         <ion-item>
-          <ion-label position="floating">Contraseña nueva</ion-label>
-          <ion-input type="password" [(ngModel)]="nuevaContrasena" name="nuevaContrasena"></ion-input>
+          <ion-label position="floating" class="custom-label">Contraseña nueva</ion-label>
+          <ion-input type="password" [(ngModel)]="nuevaContrasena" name="nuevaContrasena" class="custom-input"></ion-input>
         </ion-item>
 
         <!-- Campo "Confirmar nueva contraseña" -->
         <ion-item>
-          <ion-label position="floating">Confirmar nueva contraseña</ion-label>
-          <ion-input type="password" [(ngModel)]="confirmarContrasena" name="confirmarContrasena"></ion-input>
+          <ion-label position="floating" class="custom-label">Confirmar nueva contraseña</ion-label>
+          <ion-input type="password" [(ngModel)]="confirmarContrasena" name="confirmarContrasena" class="custom-input"></ion-input>
         </ion-item>
       </ion-list>
 
       <!-- Tu botón de enviar aquí -->
-      <ion-button expand="full" shape="round" color="primary" (click)="enviarRecuperacion()">
-        Confirmar aqui 
+      <ion-button expand="full" shape="round" color="success" class="custom-button" (click)="enviarRecuperacion()">
+        Confirmar
       </ion-button>
     </ion-card-content>
   </ion-card>
