--- a/src/app/docente-page/docente-page.page.html
+++ b/src/app/docente-page/docente-page.page.html
@@ -1,15 +1,15 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
-      </ion-buttons>
-    <ion-title>RegistrAPP</ion-title>
+    </ion-buttons>
+    <ion-title class="custom-title">RegistrAPP</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="custom-content">
   <ion-header collapse="condense">
-    <ion-toolbar>
+    <ion-toolbar color="dark">
       <ion-title size="large">DocentePage</ion-title>
     </ion-toolbar>
   </ion-header>
@@ -22,18 +22,18 @@
     </ion-card-header>
   
     <ion-card-content>
-      <form >
+      <form>
         <ion-item>
-          <ion-label>Usuario</ion-label>
+          <ion-label position="floating">Usuario</ion-label>
           <ion-input placeholder="Ingrese nombre"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label>Contraseña</ion-label>
-          <ion-input  type="password" placeholder="Ingrese nombre"></ion-input>
+          <ion-label position="floating">Contraseña</ion-label>
+          <ion-input type="password" placeholder="Ingrese contraseña"></ion-input>
         </ion-item>
       </form>
-      <ion-button (click)="goDocenteQr()" shape="round" class="btnIngresar">Ingresar</ion-button>
-      <ion-button fill="clear" shape="round" class="btnRecuperarContraseña">Recuperar contraseña</ion-button>
+      <ion-button (click)="goDocenteQr()" shape="round" color="success" class="btnIngresar">Ingresar</ion-button>
+      <ion-button fill="clear" shape="round" color="warning" class="btnRecuperarContraseña">Recuperar contraseña</ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
