--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,35 +1,43 @@
-.bienvenido{
-  font-size: 50px;
+/* Estilos para la barra de navegación y el título */
+ion-toolbar {
+  --background: #333; /* Color de fondo de la barra de navegación */
+  --color: #fff; /* Color del texto de la barra de navegación */
+}
+
+.custom-title {
+  font-size: 36px;
   font-weight: bold;
+  text-align: center;
   margin-top: 20px;
+  color: #fff; /* Cambia el color del texto según tus preferencias */
 }
 
-.titulo{
+/* Estilos para el contenido */
+.custom-content {
+  background-color: #333; /* Cambia el color de fondo del contenido según tus preferencias */
+  color: #fff; /* Cambia el color del texto del contenido según tus preferencias */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; /* Ajusta la altura del contenido al 100% del viewport */
+}
+
+/* Estilos para el "¡Bienvenido!" */
+.bienvenido-container {
   text-align: center;
-}
-
-.userSelection {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.alumnoBtn{
-  margin-top: 15px;
-}
-
-/* inicio animacion*/
-.titulo {
-  text-align: center;
+  margin-top: 30px;
 }
 
 .bienvenido {
+  font-size: 48px;
+  font-weight: bold;
+  position: relative;
   animation: moveTitle 5s infinite, fadeOpacity 1s infinite;
   opacity: 1;
+  color: #000; /* Color negro (black) */
+  margin-bottom: 20px; /* Espacio inferior para separar del contenido siguiente */
+  white-space: nowrap; /* Evita que el texto se divida en varias líneas */
 }
 
 @keyframes moveTitle {
@@ -61,26 +69,30 @@
   }
 }
 
+.highlight {
+  color: #ff5722; /* Color destacado para "App" */
+}
 
-/* fin animacion*/
+/* Estilos para los botones */
+.userSelection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30px;
+}
 
-/* Estilo para el título "RegistrAPP" */
-ion-title {
-  font-size: 24px;
+.custom-button {
+  width: 80%;
+  margin: 10px auto;
+  font-size: 18px;
   font-weight: bold;
+  background-color: #000; /* Cambia el color de fondo del botón según tus preferencias */
+  color: #fff; /* Cambia el color del texto del botón según tus preferencias */
+  border: none;
+  border-radius: 10px;
+  padding: 10px 0;
 }
 
-/* Animación de desvanecimiento */
-.fade-out {
-  animation: fadeOut 2s ease-in-out;
-  opacity: 0;
-}
-
-@keyframes fadeOut {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
+.custom-button:hover {
+  background-color: #111; /* Cambia el color de fondo del botón al pasar el ratón por encima según tus preferencias */
 }
