--- a/src/app/alumno-page/alumno-page.page.html
+++ b/src/app/alumno-page/alumno-page.page.html
@@ -10,38 +10,43 @@
       <ion-title class="custom-title">Registr<span class="animated-text">App</span></ion-title>
     </ion-toolbar>
   </ion-header>
+  </ion-content>
 
-  <ion-card class="cardLogin">
-    <ion-card-header>
-      <ion-title class="cardTitle">Iniciar Sesión</ion-title>
-    </ion-card-header>
+  <ion-content>
+    <ion-card>
+      <ion-card-header>
+        <ion-title>Iniciar Sesión</ion-title>
+      </ion-card-header>
+  
+      <ion-card-content>
+        <form [formGroup]="formulario">
+          <ion-item>
+            <ion-label position="floating">Nombre de Usuario</ion-label>
+            <ion-input formControlName="nombre" [class.animacionInput]="isCleaning" type="text" placeholder="Ingresar usuario"></ion-input>
+          </ion-item>
+          <ion-label color="danger" *ngIf="formulario.controls.nombre.hasError('required') && formulario.controls.nombre.touched">* El nombre es obligatorio</ion-label>
+          
+          <ion-item>
+            <ion-label position="floating">Contraseña</ion-label>
+            <ion-input formControlName="contrasenia" [class.animacionInput]="isCleaning" type="password" placeholder="Ingresar contraseña"></ion-input>
+          </ion-item>
+          <ion-label color="danger" *ngIf="formulario.controls.contrasenia.hasError('required') && formulario.controls.contrasenia.touched">* La contraseña es obligatoria</ion-label>
+          </form>
+        <br>
+        <ion-button [disabled]="!formulario.valid" (click)="goGeneradorQr()" expand="full" shape="round" color="primary">
+          INGRESAR
+        </ion-button>
+  
+        <!-- Agregar enlace para "Recuperar Contraseña" -->
+        <ion-button expand="full" shape="round" color="tertiary" (click)="recuperarContrasena()">
+          Recuperar Contraseña
+        </ion-button>
+  
+        <!-- Botón para limpiar campos -->
+        <ion-button expand="full" shape="round" color="secondary" (click)="limpiarFormulario">
+          LIMPIAR CAMPOS
+        </ion-button>
+      </ion-card-content>
+    </ion-card>
+  </ion-content>
 
-    <ion-card-content>
-      <ion-list lines="full" class="ion-no-margin">
-        <ion-item>
-          <ion-label position="floating" class="custom-label">Nombre de Usuario</ion-label>
-          <ion-input type="text" [(ngModel)]="username" name="username" (ionChange)="validarCampos()"></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-label position="floating" class="custom-label">Contraseña</ion-label>
-          <ion-input type="password" [(ngModel)]="password" name="password" (ionChange)="validarCampos()"></ion-input>
-        </ion-item>
-      </ion-list>
-
-      <ion-button expand="full" shape="round" color="success" class="custom-button" (click)="ingresar()">
-        INGRESAR
-      </ion-button>
-
-      <!-- Agregar enlace para "Recuperar Contraseña" -->
-      <ion-button expand="full" shape="round" color="warning" class="custom-button" (click)="recuperarContrasena()">
-        Recuperar Contraseña
-      </ion-button>
-
-      <!-- Botón para limpiar campos -->
-      <ion-button expand="full" shape="round" color="danger" class="custom-button" (click)="limpiarCampos()">
-        LIMPIAR CAMPOS
-      </ion-button>
-    </ion-card-content>
-  </ion-card>
-</ion-content>
