--- a/src/app/alumno-page/alumno-page.page.html
+++ b/src/app/alumno-page/alumno-page.page.html
@@ -43,7 +43,7 @@
         </ion-button>
   
         <!-- Botón para limpiar campos -->
-        <ion-button expand="full" shape="round" color="secondary" (click)="limpiarFormulario">
+        <ion-button expand="full" shape="round" color="secondary" (click)="limpiarFormulario()">
           LIMPIAR CAMPOS
         </ion-button>
       </ion-card-content>
