--- a/src/app/docente-page/docente-page.page.html
+++ b/src/app/docente-page/docente-page.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
       </ion-buttons>
@@ -46,9 +46,9 @@
       </ion-button>
 
       <!-- Botón para limpiar campos -->
-      <ion-button expand="full" shape="round" color="secondary" (click)="limpiarFormulario">
+      <ion-button expand="full" shape="round" color="secondary" (click)="limpiarFormulario()">
         LIMPIAR CAMPOS
-      </ion-button>
+      </ion-button>      
     </ion-card-content>
   </ion-card>
 </ion-content>
