--- a/src/app/leer-qr-alumno/leer-qr-alumno.page.html
+++ b/src/app/leer-qr-alumno/leer-qr-alumno.page.html
@@ -1,13 +1,19 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>leerQrAlumno</ion-title>
+  <ion-toolbar color="dark">
+    <ion-buttons slot="start">
+      <ion-back-button [defaultHref]="'/'"></ion-back-button>
+    </ion-buttons>
+    <ion-title class="custom-title">Leer QR Alumno</ion-title> <!-- Cambio de nombre aquí -->
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">leerQrAlumno</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <div class="welcome-container">
+    <ion-title class="ion-text-center welcome-title">Bienvenido docente</ion-title>
+    <p class="ion-text-center user">{{ userValue }}</p>
+  </div>
+
+  <div class="scan-button-container">
+    <ion-button expand="full" shape="round" color="primary" (click)="goGenerarQr()">Generar QR</ion-button>
+  </div>
 </ion-content>
