--- a/src/app/generador-qrd/generador-qrd.page.html
+++ b/src/app/generador-qrd/generador-qrd.page.html
@@ -1,16 +1,19 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>generadorQrd</ion-title>
+  <ion-toolbar color="dark">
+    <ion-buttons slot="start">
+      <ion-back-button [defaultHref]="'/'"></ion-back-button>
+    </ion-buttons>
+    <ion-title class="custom-title">Generador QR</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-<div>
-  <ion-title class="ion-text-center bienvenido">Bienvenido</ion-title>
-  <p class="ion-text-center user">{{ userValue }}</p>
-</div>
+<ion-content class="ion-padding">
+  <div class="welcome-container">
+    <ion-title class="ion-text-center welcome-title">Bienvenido docente</ion-title>
+    <p class="ion-text-center user">{{ userValue }}</p>
+  </div>
 
-  <div class="contenedorIniciarClase">
-  <ion-button>Scannear QR</ion-button>
-    </div>
+  <div class="scan-button-container">
+    <ion-button expand="full" shape="round" color="primary" (click)="goGenerarQr()">Generar QR</ion-button>
+  </div>
 </ion-content>
